<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="15dp">

    <TextView
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome_text"
        android:id="@+id/tvWelcome"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/age"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/bLogout"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>