<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_marginTop="25dp"
    android:padding="15dp"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/et_username_here" />


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content"
        android:hint="@string/password" />
    <Button
        android:id="@+id/bLogin"
        android:text="@string/login"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:nestedScrollingEnabled="false" />
    <TextView
        android:id="@+id/tvRegisterLink"
        android:layout_width="169dp"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_here"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:textColor="#0f5373"
        android:textColorHighlight="#3213e2" />


</LinearLayout>
