<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:background="#0f5ca5">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/name"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_width="wrap_content"
        android:text="@string/age"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etAge"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/username"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:inputType="textPassword"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/bRegister"
        android:text="@string/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>